--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,7 +1,7 @@
 // Home Content
 
 .home {
-
+	margin-top: 11rem;
   .intro {
 
     h2 {
