--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,6 +3,12 @@
 .navigation{
 	// border: 2px solid red;
 	.flexWrap();
+	background-color: #f4f4f4;
+
+	// Stretch Fixed nav
+	position: fixed;
+	top: 0;
+	width: 100%;
 
 	h1{
 		width: 100%;
